# Netflix-project

./: .dockerignore  .env.example  .gitignore  README.md  settings.gradle.kts
Android/app/: .gitignore  build.gradle.kts
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Server/: .env.example  README.old.md  docker-compose.yaml  package-lock.json
Server/ApiServer/: Dockerfile.Api  app.js  package-lock.json  package.json
Server/ApiServer/controllers/: Token.js  User.js  authantication.js  category.js  fileUpload.js  movie.js  movieUpload.js  query.js  recommend.js  userUpload.js
Server/ApiServer/models/: IdCounter.js  User.js  category.js  movie.js
Server/ApiServer/routes/: Token.js  Upload.js  User.js  category.js  movie.js  query.js  recommend.js
Server/ApiServer/services/: Token.js  User.js  authantication.js  category.js  movie.js  query.js  recommend.js
Server/RecommendServer/: CMakeLists.txt  Dockerfile.client  Dockerfile.recommend  Dockerfile.test  docker-compose.yaml
Server/RecommendServer/src/: Adder.cpp  App.cpp  CMakeLists.txt  Deleter.cpp  FileDataManager.cpp  Getter.cpp  Helper.cpp  Iinput.cpp  Patcher.cpp  Poster.cpp  RecAlgPart1.cpp  Recommender.cpp  SocketInput.cpp  SocketOutput.cpp  TCPServer.cpp  TerminalInput.cpp  TerminalOutput.cpp  ThreadPoolTCPServer.cpp  ThreadedTCPServer.cpp  User.cpp  client.py  main.cpp
Server/RecommendServer/test/: CMakeLists.txt  test_Adder.cpp  test_Deleter.cpp  test_FileDataManager.cpp  test_Getter.cpp  test_Helper.cpp  test_Patcher.cpp  test_Poster.cpp  test_RecAlgPart1.cpp  test_TerminalInput.cpp  test_TerminalOutput.cpp  test_ThreadedTCPServer.cpp  test_User.cpp
web/: .dockerignore  package-lock.json  package.json
web/public/: index.css  index.html
web/src/: App.js  CategoryPage.js  LoginPage.js  MainLoggedPage.js  MainPage.js  ManagePage.js  MovieInfoPage.js  NoFoundPage.js  SearchPage.js  SignUpPage.js  VideoPlayerPage.js  fetchRequests.js  movies.json
web/src/components/: Alerts.js  (+7 more)
wiki/: build.md  run-android.md  run-web.md
(+106 files in other folders)
